--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <Div class="background"></Div>
     <script src="./main.js"></script>
 </body>
 </html>
